--- a/publications.html
+++ b/publications.html
@@ -57,25 +57,6 @@
             <b>Zhifan Gao</b>, Chenchu Xu, Heye Zhang, Shuo Li, and Victor Hugo C de Albuquerque. <br>
             <i>IEEE Internet of Things Journal</i>
             </p></li>
-            
-            <li><p>
-            <b>Learning Physical Properties in Complex Visual Scenes: An Intelligent Machine for Perceiving Blood Flow Dynamics</b><br>
-            <b>from Static CT Angiography Imaging.</b> [<a href="https://doi.org/10.1016/j.neunet.2019.11.017" class=link>Link</a>]
-			<span data-badge-popover="right" data-badge-type="" data-doi="https://doi.org/10.1016/j.neunet.2019.11.017" data-hide-no-mentions="true" class="altmetric-embed">
-			</span>
-            <br>
-            <b>Zhifan Gao</b>, Xin Wang, Shanhui Sun, Dan Wu, Junjie Bai, Youbing Yin, Xin Liu, Heye Zhang, and Victor Hugo C de Albuquerque. <br>
-            <i>Neural Networks</i>
-            </p></li>
-
-            <li><p>
-            <b>Learning the Implicit Strain Reconstruction in Ultrasound Elastography Using Privileged Information.</b> [<a href="https://doi.org/10.1016/j.media.2019.101534" class=link>Link</a>]
-			<span data-badge-popover="right" data-badge-type="" data-doi="https://doi.org/10.1016/j.media.2019.101534" data-hide-no-mentions="true" class="altmetric-embed">
-			</span>
-            <br>
-            <b>Zhifan Gao</b>, Sitong Wu, Zhi Liu, Jianwen Luo, Heye Zhang, Mingming Gong, and Shuo Li. <br>
-            <i>Medical Image Analysis</i>
-            </p></li>
  
         </ul>
     </div>
@@ -90,7 +71,17 @@
             <br>
             <b>Zhifan Gao</b>, Jonathan Chung, Mohamed Abdelrazek, Stephanie Leung, William Kongto Hau, Zhanchao Xian, Heye Zhang, and Shuo Li. <br>
             <i>IEEE Transactions on Medical Imaging</i> 39(5):1524-1534, 2020.
-            </p></li>		
+            </p></li>	
+		
+            <li><p>
+            <b>Learning Physical Properties in Complex Visual Scenes: An Intelligent Machine for Perceiving Blood Flow Dynamics</b><br>
+            <b>from Static CT Angiography Imaging.</b> [<a href="https://doi.org/10.1016/j.neunet.2019.11.017" class=link>Link</a>]
+			<span data-badge-popover="right" data-badge-type="" data-doi="https://doi.org/10.1016/j.neunet.2019.11.017" data-hide-no-mentions="true" class="altmetric-embed">
+			</span>
+            <br>
+            <b>Zhifan Gao</b>, Xin Wang, Shanhui Sun, Dan Wu, Junjie Bai, Youbing Yin, Xin Liu, Heye Zhang, and Victor Hugo C de Albuquerque. <br>
+            <i>Neural Networks</i> 123:82-93, 2020.
+            </p></li>
 		
 		
             <li><p>
@@ -137,6 +128,14 @@
 
 
         <ul>
+            <li><p>
+            <b>Learning the Implicit Strain Reconstruction in Ultrasound Elastography Using Privileged Information.</b> [<a href="https://doi.org/10.1016/j.media.2019.101534" class=link>Link</a>]
+			<span data-badge-popover="right" data-badge-type="" data-doi="https://doi.org/10.1016/j.media.2019.101534" data-hide-no-mentions="true" class="altmetric-embed">
+			</span>
+            <br>
+            <b>Zhifan Gao</b>, Sitong Wu, Zhi Liu, Jianwen Luo, Heye Zhang, Mingming Gong, and Shuo Li. <br>
+            <i>Medical Image Analysis</i> 58(101534), 2019.
+            </p></li>
 		
             <li><p>
             <b>Deep Learning for Diagnosis of Chronic Myocardial Infarction on Nonenhanced Cardiac Cine MRI.</b> [<a href="https://doi.org/10.1148/radiol.2019182304" class=link>Link</a>] 
