--- a/publications.html
+++ b/publications.html
@@ -48,15 +48,7 @@
             <i>IEEE Transactions on Neural Networks and Learning Systems</i>
             </p></li>
 
-   
-            <li><p>
-            <b>Trustful Internet of Surveillance Things Based on Deeply-Represented Visual Co-Saliency Detection.</b> [<a href="https://doi.org/10.1109/JIOT.2019.2963701" class=link>Link</a>]
-			<span data-badge-popover="right" data-badge-type="" data-doi="https://doi.org/10.1109/JIOT.2019.2963701" data-hide-no-mentions="true" class="altmetric-embed">
-			</span>
-            <br>
-            <b>Zhifan Gao</b>, Chenchu Xu, Heye Zhang, Shuo Li, and Victor Hugo C de Albuquerque. <br>
-            <i>IEEE Internet of Things Journal</i>
-            </p></li>
+  
  
         </ul>
     </div>
@@ -91,6 +83,15 @@
             <br>
             <b>Zhifan Gao</b>, Heye Zhang, Shizhou Dong, Shanhui Sun, Xin Wang, Guang Yang, Wanqing Wu, Shuo Li, and Victor Hugo C. de Albuquerque. <br>
             <i>IEEE Network</i> 34(2):216-224, 2020.
+            </p></li>
+	
+	    <li><p>
+            <b>Trustful Internet of Surveillance Things Based on Deeply-Represented Visual Co-Saliency Detection.</b> [<a href="https://doi.org/10.1109/JIOT.2019.2963701" class=link>Link</a>]
+			<span data-badge-popover="right" data-badge-type="" data-doi="https://doi.org/10.1109/JIOT.2019.2963701" data-hide-no-mentions="true" class="altmetric-embed">
+			</span>
+            <br>
+            <b>Zhifan Gao</b>, Chenchu Xu, Heye Zhang, Shuo Li, and Victor Hugo C de Albuquerque. <br>
+            <i>IEEE Internet of Things Journal</i> 7(5):4092-4100, 2020.
             </p></li>
 	
 	    <li><p>
