--- a/service.html
+++ b/service.html
@@ -39,6 +39,7 @@
             <li><p> IEEE Journal of Biomedical and Health Informatics  </p></li>
             <li><p> IEEE Internet of Things Journal </p></li>
             <li><p> IEEE Network Magzine <p></li>
+            <li><p> IEEE Signal Processing Letters <p></li>
             <li><p> IEEE Access </p></li>
             <li><p> Neural Networks </p></li>
             <li><p> Medical Physics </p></li>
