--- a/service.html
+++ b/service.html
@@ -36,6 +36,7 @@
             <li><p> IEEE Transactions on Multimedia   </p></li>
             <li><p> IEEE Transactions on Intelligent Transportation Systems   </p></li>
             <li><p> IEEE Transactions on Industrial Informatics   </p></li>
+            <li><p> IEEE/ACM Transactions on Computational Biology and Bioinformatics  </p></li>
             <li><p> IEEE Journal of Biomedical and Health Informatics  </p></li>
             <li><p> IEEE Internet of Things Journal </p></li>
             <li><p> IEEE Network Magzine <p></li>
