--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </td>
     </table>
     <p align='justify'>
-    I will join Sun Yat-sen University in this summer. I am a postdoc at the <a href="https://www.uwo.ca/" target="_blank">Schulich School of Medicine & Dentistry, 
+    I am an associate professor at School of Biomedical Engineering, Sun Yat-sen University (SYSU). Before joining SYSU, I was a postdoc at the <a href="https://www.uwo.ca/" target="_blank">Schulich School of Medicine & Dentistry, 
     Western University (UWO)</a>, Canada, working with Prof. 
     <a href="http://www.digitalimaginggroup.ca/members/shuo.php/" target="_blank">Shuo Li</a>. 
     I obtained the Ph.D. in Pattern Recognition and Intelligent Systems from 
@@ -54,7 +54,13 @@
     and M.Eng. and B.Sc. in Electronic and Information Engineering from 
     <a href="http://english.hust.edu.cn/" target="_blank">Huazhong University of Science and Technology</a>, China.
     </p>
-
+    
+    <p align='justify'>
+    I am always looking for highly-motivated students with strong mathematical background or excellent coding skills. 
+    If you are interested in working with me, 
+    please send me an email about your interests and background (attaching your CV, transcripts, and any previous research papers).
+    </p>
+    
     <div>
     <h2><hr><a name="research"></a>Research Interests</h2>
 
