--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
             <br>
             <p><span style="font-size: 110%"><b>Zhifan Gao</b></span></p>
             <p>
-                Postdoc in Computer Vision and AI-aided Disease Diagnosis<br>
-                Schulich School of Medicine & Dentistry<br>
-                Western University <br> <br>
+                Associate Professor in Machine Learning and AI-aided Disease Diagnosis<br>
+                School of Biomedical Engineering<br>
+                Sun Yat-sen University <br> <br>
 
 
-                Office: E5-137, 268 Grosvenor Street, London, ON, N6A 4V2, Canada<br>
+                Office: No.132, East Outer Ring Road, Guangzhou, Guangdong, 510006, China<br>
                 E-mail: <a href="malto:zhifan.gao@outlook.com">zhifan.gao@outlook.com</a><br>
                 <a href="https://scholar.google.com/citations?user=u7ynBDcAAAAJ&hl=en&oi=ao" target="_blank">
                 [Google Scholar]</a>
