--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </td>
     </table>
     <p align='justify'>
-    I am an associate professor at School of Biomedical Engineering, Sun Yat-sen University (SYSU). Before joining SYSU, I was a postdoc at the <a href="https://www.uwo.ca/" target="_blank">Schulich School of Medicine & Dentistry, 
+    I am an associate professor at School of Biomedical Engineering, Sun Yat-sen University (SYSU). Before joining SYSU, I was a postdoc at <a href="https://www.uwo.ca/" target="_blank">Schulich School of Medicine & Dentistry, 
     Western University (UWO)</a>, Canada, working with Prof. 
     <a href="http://www.digitalimaginggroup.ca/members/shuo.php/" target="_blank">Shuo Li</a>. 
     I obtained the Ph.D. in Pattern Recognition and Intelligent Systems from 
