--- a/publications.html
+++ b/publications.html
@@ -40,6 +40,13 @@
     <div>
         <h2><hr><a name="In Press"></a>In Press</h2>
             <ul>
+         
+            <li><p>
+            <b>Industrial Pervasive Edge Computing-based Intelligence IoT for Surveillance Saliency Detection. </b>
+            <br> 
+            Jinglin Zhang, Chenchu Xu, Zhifan Gao, Joel J. P. C. Rodrigues, and Victor Hugo C. de Albuquerque. <br>
+            <i>IEEE Transactions on Industrial Informatics</i>
+            </p></li>
 	    
             <li><p>
             <b>Multi-Task Learning for Estimating Multi-Type Cardiac Indices in MRI and CT Based on Adversarial Reverse Mapping. </b> [<a href="https://doi.org/10.1109/TNNLS.2020.2984955" class=link>Link</a>] 
