--- a/publications.html
+++ b/publications.html
@@ -42,7 +42,7 @@
             <ul>
          
             <li><p>
-            <b>Industrial Pervasive Edge Computing-based Intelligence IoT for Surveillance Saliency Detection. </b>
+            <b>Industrial Pervasive Edge Computing-based Intelligence IoT for Surveillance Saliency Detection. </b> [<a href="https://doi.org/10.1109/TII.2020.3007792" class=link>Link</a>] 
             <br> 
             Jinglin Zhang, Chenchu Xu, Zhifan Gao, Joel J. P. C. Rodrigues, and Victor Hugo C. de Albuquerque. <br>
             <i>IEEE Transactions on Industrial Informatics</i>
