--- a/service.html
+++ b/service.html
@@ -49,6 +49,7 @@
             <li><p> Computer Methods and Programs in Biomedicine </p></li>
             <li><p> Computers in Biology and Medicine </p></li>
             <li><p> Computing </p></li>
+            <li><p> Frontiers Neuroinformatics </p></li>
             <li><p> Future Generation Computer Systems  </p></li>
             <li><p> Journal of Visual Communication and Image Representation </p></li>
             <li><p> Multimedia Tools and Applications </p></li>
