--- a/publications.html
+++ b/publications.html
@@ -40,6 +40,13 @@
     <div>
         <h2><hr><a name="In Press"></a>In Press</h2>
             <ul>
+		    
+            <li><p>
+            <b>Carotid Wall Longitudinal Motion in Ultrasound Imaging: An Expert Consensus Review. </b> [<a href="https://doi.org/10.1016/j.ultrasmedbio.2020.06.006" class=link>Link</a>] 
+            <br> 
+            Fereshteh Yousefi Rizi, JasonAu, HeikkiYli-Ollila, Spyretta Golemati, Monika Mak&#363nait&#279, Maciej Orkisz, Nassir Navab, Maureen MacDonald, Tiina Marja Laitinen, Hamid Behnam, Zhifan Gao, Aimilia Gastounioti, Rytis Jurkonis, Didier Vray, Tomi Laitinen, Andr&#233 S&#233rusclat, Konstantina S. Nikita, and Guillaume Zahnd. <br>
+            <i>Ultrasound in Medicine and Biology</i>
+            </p></li>
          
             <li><p>
             <b>Industrial Pervasive Edge Computing-based Intelligence IoT for Surveillance Saliency Detection. </b> [<a href="https://doi.org/10.1109/TII.2020.3007792" class=link>Link</a>] 
