--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
     <div>
         <h2><hr><a name="news"></a>News</h2>
         <ul>
+          <li><p> 07/2020, a paper on video saliency detection accepted to IEEE TII.
+          <li><p> 06/2020, an expert consensus review on carotid motion estimation accepted to UMB.
           <li><p> 03/2020, a paper on cardiac index estimation accepted to IEEE TNNLS.
           <li><p> 12/2019, a paper on co-saliency detection accepted to IEEE IoT.
           <li><p> 11/2019, a paper on learning physical properties of blood flow dynamics accepted to Neural Networks.
