--- a/publications.html
+++ b/publications.html
@@ -45,7 +45,7 @@
             <b>Carotid Wall Longitudinal Motion in Ultrasound Imaging: An Expert Consensus Review. </b> [<a href="https://doi.org/10.1016/j.ultrasmedbio.2020.06.006" class=link>Link</a>] 
             <br> 
             Fereshteh Yousefi Rizi, JasonAu, HeikkiYli-Ollila, Spyretta Golemati, Monika Mak&#363nait&#279, Maciej Orkisz, Nassir Navab, Maureen MacDonald, 
-            Tiina Marja Laitinen, Hamid Behnam, <b>Zhifan Gao</n>, Aimilia Gastounioti, Rytis Jurkonis, Didier Vray, Tomi Laitinen, Andr&#233 S&#233rusclat, 
+            Tiina Marja Laitinen, Hamid Behnam, <b>Zhifan Gao</b>, Aimilia Gastounioti, Rytis Jurkonis, Didier Vray, Tomi Laitinen, Andr&#233 S&#233rusclat, 
             Konstantina S. Nikita, and Guillaume Zahnd. <br>
             <i>Ultrasound in Medicine and Biology</i>
             </p></li>
