--- a/publications.html
+++ b/publications.html
@@ -391,7 +391,7 @@
 			<span data-badge-popover="right" data-badge-type="" data-doi="https://doi.org/10.1016/j.ultrasmedbio.2015.03.022" data-hide-no-mentions="true" class="altmetric-embed">
 			</span>
             <br> 
-            <b>Zhifan Gao</b>, William Kongto Hau, Minhua Lu, Wenhua Huang, Heye Zhang, Chunyue Li, and Xin Liu. <br>
+            <b>Zhifan Gao</b>, William Kongto Hau, Minhua Lu, Wenhua Huang, Heye Zhang, Wanqing Wu, Xin Liu, and Yuan-Ting Zhang. <br>
             <i>Ultrasound in Medicine & Biology</i> 37(1):273-283, 2015.
             </p></li> 
         </ul>
