--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 
                 Office: No.132, East Outer Ring Road, Guangzhou, Guangdong, 510006, China<br>
-                E-mail: <a href="malto:gaozhifan@mail.sysu.edu.cn">gaozhifan@mail.sysu.edu.cn</a>
+                E-mail: <a href="malto:gaozhifan@mail.sysu.edu.cn">gaozhifan@mail.sysu.edu.cn</a><br>
                 <a href="https://scholar.google.com/citations?user=u7ynBDcAAAAJ&hl=en&oi=ao" target="_blank">
                 [Google Scholar]</a>
                 <a href="https://www.researchgate.net/profile/Zhifan_Gao2" target="_blank">[ResearchGate]</a>
