--- a/publications.html
+++ b/publications.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="base.css" />
     <link rel="stylesheet" type="text/css" href="publication.css" />
     <title>Zhifan Gao</title>
-    <base href="https://zhifan-gao.github.io/publications.html">
+    <base href="https://zhifan-gao.gitee.io/publications.html">
 <!--     <base href="./publications.html"> -->
     <style type="text/css"> 
     .left {
@@ -24,7 +24,9 @@
 <td id="layout-menu">
     <div class="menu-item"><a href="index.html">Home</a></div>
     <div class="menu-item"><a href="research.html">Research</a></div>
+    <div class="menu-item"><a href="group.html">Group</a></div>
     <div class="menu-item"><a href="publications.html" class="current">Publications</a></div>
+    <div class="menu-item"><a href="teaching.html">Teaching</a></div>
     <div class="menu-item"><a href="service.html">Service</a></div>
 </td>
 <td id="layout-content">
@@ -401,3 +403,4 @@
 </table>
 </body>
 </html>
+
