--- a/service.html
+++ b/service.html
@@ -24,6 +24,16 @@
 
     <h1 style="margin-top: 0em">Professional Services</h1>
     <div>
+        <h2><hr><a name="profact"></a>Conference PC Member</h2>
+        <ul>
+            <li><p> Program Commitee Member, AAAI Conference on Artificial Intelligence (AAAI) </p></li>
+            <li><p> Program Commitee Member, International Joint Conferences on Artificial Intelligence (IJCAI) </p></li>
+        </ul>    
+        <h2><hr><a name="profact"></a>Journal Editor</h2>
+        <ul>
+            <li><p> Academic Editor, Medicine</p></li>
+            <li><p> Guest Editor, Frontiers in Oncology </p></li>
+        </ul>
         <h2><hr><a name="profact"></a>Conference Reviewer</h2>
         <ul>
             <li><p> International Conference on Medical Image Computing and Computer Assisted Intervention (MICCAI) </p></li>
