--- a/service.html
+++ b/service.html
@@ -26,8 +26,8 @@
     <div>
         <h2><hr><a name="profact"></a>Conference PC Member</h2>
         <ul>
-            <li><p> Program Commitee Member, AAAI Conference on Artificial Intelligence (AAAI) </p></li>
-            <li><p> Program Commitee Member, International Joint Conferences on Artificial Intelligence (IJCAI) </p></li>
+            <li><p> AAAI Conference on Artificial Intelligence (AAAI) </p></li>
+            <li><p> International Joint Conferences on Artificial Intelligence (IJCAI) </p></li>
         </ul>    
         <h2><hr><a name="profact"></a>Journal Editor</h2>
         <ul>
