--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           <li><p> 11/2017, a paper on carotid artery segmenation accepted to IEEE JBHI.
           <li><p> 06/2017, I began to server as a reviewer of MICCAI. 
           <li><p> 05/2017, a paper on direct detection of mocardial infarction accepted to <a target="_blank" href="https://www.miccai2017.org/">MICCAI 2017</a>.
-          <li><p> 05/2017, I won the Special Prize of President Scholarship for Postgraduate Students awarded by Chinese Academy of Sciences (CAS).
+          <li><p> 05/2017, I won the President Award of Chinese Academy of Sciences.
           <li><p> 06/2016, I won the Student Travel Award of MICCAI 2016.
           <li><p> 04/2016, a paper accepted to <a target="_blank" href="http://www.miccai2016.org/en/">MICCAI 2016</a>.
           <li><p> 06/2015, I won the Student Travel Award of MICCAI 2015.
