--- a/service.html
+++ b/service.html
@@ -1,4 +1,3 @@
-
 <html>
 
 <head>
@@ -6,8 +5,8 @@
     <link rel="stylesheet" type="text/css" href="base.css" />
     <link rel="stylesheet" type="text/css" href="service.css" />
     <title>Zhifan Gao</title>
-    <base href="https://zhifan-gao.github.io/service.html">
-<!--     <base href="./service.html"> -->
+    <base href="https://zhifan-gao.gitee.io/service.html">
+ <!--           <base href="./service.html"> -->
 </head>
 
 <body>
@@ -17,7 +16,9 @@
 <td id="layout-menu">
     <div class="menu-item"><a href="index.html">Home</a></div>
     <div class="menu-item"><a href="research.html">Research</a></div>
+    <div class="menu-item"><a href="group.html">Group</a></div>
     <div class="menu-item"><a href="publications.html">Publications</a></div>
+    <div class="menu-item"><a href="teaching.html">Teaching</a></div>
     <div class="menu-item"><a href="service.html" class="current">Service</a></div>
 </td>
 <td id="layout-content">
@@ -29,14 +30,10 @@
             <li><p> AAAI Conference on Artificial Intelligence (AAAI) </p></li>
             <li><p> International Joint Conferences on Artificial Intelligence (IJCAI) </p></li>
         </ul>    
-        <h2><hr><a name="profact"></a>Journal Editor</h2>
-        <ul>
-            <li><p> Academic Editor, Medicine</p></li>
-            <li><p> Guest Editor, Frontiers in Oncology </p></li>
-        </ul>
         <h2><hr><a name="profact"></a>Conference Reviewer</h2>
         <ul>
             <li><p> International Conference on Medical Image Computing and Computer Assisted Intervention (MICCAI) </p></li>
+            <li><p> ACM Multimedia Asia </p></li>
         </ul>
         <h2><hr><a name="profact"></a>Journal Reviewer</h2>        
         <ul>
