--- a/service.html
+++ b/service.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="base.css" />
     <link rel="stylesheet" type="text/css" href="service.css" />
     <title>Zhifan Gao</title>
-    <base href="https://zhifan-gao.gitee.io/service.html">
+    <base href="https://zhifan-gao.github.io/service.html">
  <!--           <base href="./service.html"> -->
 </head>
 
