--- a/group.html
+++ b/group.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="base.css" />
     <link rel="stylesheet" type="text/css" href="group.css" />
     <title>Zhifan Gao</title>
-    <base href="https://zhifan-gao.gitee.io/group.html">
+    <base href="https://zhifan-gao.github.io/group.html">
    <!--  <base href="./group.html">  -->
 </head>
 
