--- a/teaching.html
+++ b/teaching.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="base.css" />
     <link rel="stylesheet" type="text/css" href="teaching.css" />
     <title>Zhifan Gao</title>
-    <base href="https://zhifan-gao.gitee.io/teaching.html">
+    <base href="https://zhifan-gao.github.io/teaching.html">
  <!--    <base href="./teaching.html">  -->
 </head>
 
