--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 <td id="layout-menu">
     <div class="menu-item"><a href="index.html" class="current">Home</a></div>
     <div class="menu-item"><a href="research.html">Research</a></div>
+    <div class="menu-item"><a href="group.html">Group</a></div>
     <div class="menu-item"><a href="publications.html">Publications</a></div>
+    <div class="menu-item"><a href="teaching.html">Teaching</a></div>
     <div class="menu-item"><a href="service.html">Service</a></div>
 </td>
 <td id="layout-content">
