--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 
                 Office: No.132, East Outer Ring Road, Guangzhou, Guangdong, 510006, China<br>
-                E-mail: <a href="malto:gaozhifan@mail.sysu.edu.cn">gaozhifan@mail.sysu.edu.cn</a><br>
+                E-mail: <a href="malto:gaozhifan@gmail.com">gaozhifan@gmail.com</a><br>
                 <a href="https://scholar.google.com/citations?user=u7ynBDcAAAAJ&hl=en&oi=ao" target="_blank">
                 [Google Scholar]</a>
                 <a href="https://www.researchgate.net/profile/Zhifan_Gao2" target="_blank">[ResearchGate]</a>
@@ -51,9 +51,7 @@
     Western University (UWO)</a>, Canada, working with Prof. 
     <a href="http://www.digitalimaginggroup.ca/members/shuo.php/" target="_blank">Shuo Li</a>. 
     I obtained the Ph.D. in Pattern Recognition and Intelligent Systems from 
-    <a /href="http://english.ucas.ac.cn/" target="_blank">University of Chinese Academy of Sciences</a>, 
-    supervised by Prof. <a \href="http://www.cityu.edu.hk/mbe/yzhan37/" target="_blank">Yuan-Ting Zhang</a>, 
-    and M.Eng. and B.Sc. in Electronic and Information Engineering from 
+    <a /href="http://english.ucas.ac.cn/" target="_blank">University of Chinese Academy of Sciences</a>, and M.Eng. and B.Sc. in Electronic and Information Engineering from 
     <a href="http://english.hust.edu.cn/" target="_blank">Huazhong University of Science and Technology</a>, China.
     </p>
     
@@ -75,6 +73,7 @@
     <div>
         <h2><hr><a name="news"></a>News</h2>
         <ul>
+          <li><p> 01/2021, I was invited to be a grant reviewer of <a target="_blank" href="https://mrc.ukri.org/"> Medical Research Council (MRC), UK</a>.
           <li><p> 12/2020, I won the Wu Wenjun AI Science & Technology Outstanding Youth Award.
           <li><p> 07/2020, a paper on video saliency detection accepted to IEEE TII.
           <li><p> 06/2020, an expert consensus review on carotid motion estimation accepted to UMB.
