--- a/publications.html
+++ b/publications.html
@@ -42,15 +42,6 @@
     <div>
         <h2><hr><a name="In Press"></a>In Press</h2>
             <ul>
-		    
-            <li><p>
-            <b>Carotid Wall Longitudinal Motion in Ultrasound Imaging: An Expert Consensus Review. </b> [<a href="https://doi.org/10.1016/j.ultrasmedbio.2020.06.006" class=link>Link</a>] 
-            <br> 
-            Fereshteh Yousefi Rizi, JasonAu, HeikkiYli-Ollila, Spyretta Golemati, Monika Mak&#363nait&#279, Maciej Orkisz, Nassir Navab, Maureen MacDonald, 
-            Tiina Marja Laitinen, Hamid Behnam, <b>Zhifan Gao</b>, Aimilia Gastounioti, Rytis Jurkonis, Didier Vray, Tomi Laitinen, Andr&#233 S&#233rusclat, 
-            Konstantina S. Nikita, and Guillaume Zahnd. <br>
-            <i>Ultrasound in Medicine and Biology</i>
-            </p></li>
          
             <li><p>
             <b>Industrial Pervasive Edge Computing-based Intelligence IoT for Surveillance Saliency Detection. </b> [<a href="https://doi.org/10.1109/TII.2020.3007792" class=link>Link</a>] 
@@ -74,6 +65,16 @@
         <div>
         <h2><hr><a name="2020"></a>2020</h2>
         <ul>
+		
+	    <li><p>
+            <b>Carotid Wall Longitudinal Motion in Ultrasound Imaging: An Expert Consensus Review. </b> [<a href="https://doi.org/10.1016/j.ultrasmedbio.2020.06.006" class=link>Link</a>] 
+            <br> 
+            Fereshteh Yousefi Rizi, Jason Au, Heikki Yli-Ollila, Spyretta Golemati, Monika Mak&#363nait&#279, Maciej Orkisz, Nassir Navab, Maureen MacDonald, 
+            Tiina Marja Laitinen, Hamid Behnam, <b>Zhifan Gao</b>, Aimilia Gastounioti, Rytis Jurkonis, Didier Vray, Tomi Laitinen, Andr&#233 S&#233rusclat, 
+            Konstantina S. Nikita, and Guillaume Zahnd. <br>
+            <i>Ultrasound in Medicine and Biology</i> 46(10):2605-2624, 2020.
+            </p></li>	
+		
             <li><p>
             <b>Privileged Modality Distillation for Vessel Border Detection in Intracoronary Imaging.</b> [<a href="https://doi.org/10.1109/TMI.2019.2952939" class=link>Link</a>]
 			<span data-badge-popover="right" data-badge-type="" data-doi="https://doi.org/10.1109/TMI.2019.2952939" data-hide-no-mentions="true" class="altmetric-embed">
