--- a/service.html
+++ b/service.html
@@ -40,6 +40,7 @@
             <li><p> IEEE Transactions on Image Processing </p></li>
             <li><p> IEEE Transactions on Medical Imaging  </p></li>
             <li><p> IEEE Transactions on Multimedia   </p></li>
+            <li><p> IEEE Transactions on Neural Networks and Learning Systems </p></li>
             <li><p> IEEE Transactions on Intelligent Transportation Systems   </p></li>
             <li><p> IEEE Transactions on Industrial Informatics   </p></li>
             <li><p> IEEE/ACM Transactions on Computational Biology and Bioinformatics  </p></li>
