--- a/service.html
+++ b/service.html
@@ -41,6 +41,7 @@
             <li><p> IEEE Transactions on Medical Imaging  </p></li>
             <li><p> IEEE Transactions on Multimedia   </p></li>
             <li><p> IEEE Transactions on Neural Networks and Learning Systems </p></li>
+            <li><p> IEEE Transactions on Cybernetics </p></li>
             <li><p> IEEE Transactions on Intelligent Transportation Systems   </p></li>
             <li><p> IEEE Transactions on Industrial Informatics   </p></li>
             <li><p> IEEE/ACM Transactions on Computational Biology and Bioinformatics  </p></li>
@@ -61,6 +62,7 @@
             <li><p> Future Generation Computer Systems  </p></li>
             <li><p> Journal of Visual Communication and Image Representation </p></li>
             <li><p> Multimedia Tools and Applications </p></li>
+            <li><p> Machine Vision and Applications </p></li>
             <li><p> Neural Processing Letters </p></li>
         </ul>
     </div>
