--- a/service.html
+++ b/service.html
@@ -28,6 +28,7 @@
         <h2><hr><a name="profact"></a>Conference PC Member</h2>
         <ul>
             <li><p> AAAI Conference on Artificial Intelligence (AAAI) </p></li>
+            <li><p> International Conference on Computer Vision (ICCV) </p></li>
             <li><p> International Joint Conferences on Artificial Intelligence (IJCAI) </p></li>
         </ul>    
         <h2><hr><a name="profact"></a>Conference Reviewer</h2>
