--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
     <div>
         <h2><hr><a name="news"></a>News</h2>
         <ul>
+          <li><p> 02/2021, I was certified as the IEEE TMI Distinguished Reviewer.
           <li><p> 01/2021, I was invited to be a grant reviewer of <a target="_blank" href="https://mrc.ukri.org/"> Medical Research Council (MRC), UK</a>.
           <li><p> 12/2020, I won the Wu Wenjun AI Science & Technology Outstanding Youth Award.
           <li><p> 07/2020, a paper on video saliency detection accepted to IEEE TII.
