--- a/group.html
+++ b/group.html
@@ -29,13 +29,15 @@
         <h2><hr><a name="profact"></a>PhD Student</h2>
         <ul>
             <li><p> Saidi Guo (Co-superviser) </p></li>
+            <li><p> Bing Zhang (Co-superviser) </p></li>
         </ul>
         <h2><hr><a name="profact"></a>Master Student</h2>        
         <ul>
             <li><p> Tianyuan Feng </p></li>
             <li><p> Yihua Zhi  </p></li>
+            <li><p> Hongwei Zhang </p></li>
+            <li><p> Yifeng Guo </p></li>
             <li><p> Xuejiao Li (Co-superviser) </p></li>
-            <li><p> Hongwei Zhang (Co-superviser)  </p></li>
         </ul>
     </div>
 </td>
