--- a/teaching.html
+++ b/teaching.html
@@ -26,9 +26,10 @@
 
     <h1 style="margin-top: 0em">Teaching</h1>
     <div>
-        <h2><hr><a name="profact"></a>Medical Image Processing, 2021 Spring</h2> 
-        <h2><hr><a name="profact"></a>Programming Language, 2020 Fall</h2>   
-        <h2><hr><a name="profact"></a>Machine Learning, 2020 Fall</h2>  
+        <hr><a name="profact">
+                <p></a>Medical Image Processing, 2021 Spring </p>
+                <p></a>Programming Language, 2020 Fall </p>
+                <p></a>Machine Learning, 2020 Fall </p>
     </div>
 </td>
 </tr>
