--- a/publications.html
+++ b/publications.html
@@ -42,6 +42,20 @@
     <div>
         <h2><hr><a name="Preprints"></a>Preprints</h2>
         <ul>
+	    <li><p>
+            <b>Data and Physics Driven Learning Models for Fast MRI--Fundamentals and Methodologies from CNN, GAN to Attention and Transformers. </b> [<a href="https://arxiv.org/abs/2204.01706" class=link>Link</a>] 
+            <br> 
+            Jiahao Huang, Yingying Fang, Yang Nan, Huanjun Wu, Yinzhe Wu, <b>Zhifan Gao</b>, Yang Li, Zidong Wang, Pietro Lio, Daniel Rueckert, Yonina C. Eldar, and Guang Yang. <br>
+            <i>arXiv</i>
+            </p></li> 
+		
+	    <li><p>
+            <b>Swin Deformable Attention U-Net Transformer (SDAUT) for Explainable Fast MRI. </b> [<a href="https://arxiv.org/abs/2207.02390" class=link>Link</a>] 
+            <br> 
+            Jiahao Huang, Xiaodan Xing, <b>Zhifan Gao</b>, and Guang Yang. <br>
+            <i>arXiv</i>
+            </p></li> 
+		
             <li><p>
             <b>Multi-Domain Integrative Swin Transformer Network for Sparse-View CT Reconstruction. </b> [<a href="https://arxiv.org/abs/2111.14831" class=link>Link</a>] 
             <br> 
