--- a/service.html
+++ b/service.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="base.css" />
     <link rel="stylesheet" type="text/css" href="service.css" />
     <title>Zhifan Gao</title>
-    <base href="https://zhifan-gao.github.io/service.html">
+    <base href="https://zhifan-gao.gitee.io/service.html">
  <!--           <base href="./service.html"> -->
 </head>
 
@@ -32,12 +32,15 @@
         </ul>    
         <h2><hr><a name="profact"></a>Conference Reviewer</h2>
         <ul>
-            <li><p> International Conference on Computer Vision (ICCV) </p></li>
+            <li><p> IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR) </p></li>
+            <li><p> IEEE International Conference on Computer Vision (ICCV) </p></li>
             <li><p> International Conference on Medical Image Computing and Computer Assisted Intervention (MICCAI) </p></li>
             <li><p> ACM Multimedia Asia </p></li>
+            <li><p> International Conference on Pattern Recognition (ICPR) </p></li>
         </ul>
         <h2><hr><a name="profact"></a>Journal Reviewer</h2>        
         <ul>
+            <li><p> IEEE Transactions on Pattern Analysis and Machine Intelligence </p></li>
             <li><p> IEEE Transactions on Image Processing </p></li>
             <li><p> IEEE Transactions on Medical Imaging  </p></li>
             <li><p> IEEE Transactions on Multimedia   </p></li>
@@ -50,7 +53,8 @@
             <li><p> IEEE Internet of Things Journal </p></li>
             <li><p> IEEE Network Magzine <p></li>
             <li><p> IEEE Signal Processing Letters <p></li>
-            <li><p> IEEE Access </p></li>
+            <li><p> ACM Transactions on Multimedia Computing, Communications and Applications
+            <li><p> ACM Transactions on Internet Technology
             <li><p> Neural Networks </p></li>
             <li><p> Medical Physics </p></li>
             <li><p> Physics in Medicine and Biology </p></li>
