--- a/teaching.html
+++ b/teaching.html
@@ -27,9 +27,10 @@
     <h1 style="margin-top: 0em">Teaching</h1>
     <div>
         <hr><a name="profact">
-                <p></a>Medical Image Processing, 2021 Spring </p>
+                <p></a>Introduction to Artificial Intelligence, 2022 Spring </p>
+                <p></a>Medical Image Processing, 2021 Spring, 2022 Spring </p>
                 <p></a>Programming Language, 2020 Fall </p>
-                <p></a>Machine Learning, 2020 Fall </p>
+                <p></a>Machine Learning, 2020 Fall, 2021 Fall </p>
     </div>
 </td>
 </tr>
