--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 
                 Office: No.132, East Outer Ring Road, Guangzhou, Guangdong, 510006, China<br>
-                E-mail: <a href="malto:gaozhifan@gmail.com">gaozhifan@gmail.com</a><br>
+                E-mail: <a href="malto:gaozhifan@gmail.com">gaozhifan@gmail.com</a><br>; <a href="malto:gaozhifan@gmail.com">gaozhifan@mail.sysu.edu.cn</a><br>
                 <a href="https://scholar.google.com/citations?user=u7ynBDcAAAAJ&hl=en&oi=ao" target="_blank">
                 [Google Scholar]</a>
                 <a href="https://www.researchgate.net/profile/Zhifan_Gao2" target="_blank">[ResearchGate]</a>
@@ -73,13 +73,17 @@
     <div>
         <h2><hr><a name="news"></a>News</h2>
         <ul>
+          <li><p> 01/2022, our paper on coronary blood flow model was featured as the <a target="_blank" href="https://doi.org/10.1002/mp.14260">Cover Paper</a> in Medical Physics.
+          <li><p> 12/2021, a paper on angiographic reconstruction by generative adversarial network accepted to FGCS.
+          <li><p> 08/2021, a paper on multi-modal cardiac image segmentation accepted to Medical Image Analysis.
+          <li><p> 06/2021, a paper on joint segmentation and quantification of main coronary vessels accepted to MICCAI 2021.
           <li><p> 02/2021, I was certified as the IEEE TMI Distinguished Reviewer.
           <li><p> 01/2021, I was invited to be a grant reviewer of <a target="_blank" href="https://mrc.ukri.org/"> Medical Research Council (MRC), UK</a>.
           <li><p> 12/2020, I won the Wu Wenjun AI Science & Technology Outstanding Youth Award.
           <li><p> 07/2020, a paper on video saliency detection accepted to IEEE TII.
           <li><p> 06/2020, an expert consensus review on carotid motion estimation accepted to UMB.
           <li><p> 03/2020, a paper on cardiac index estimation accepted to IEEE TNNLS.
-          <li><p> 12/2019, a paper on co-saliency detection accepted to IEEE IoT.
+          <li><p> 12/2019, a paper on image co-saliency detection accepted to IEEE IoT.
           <li><p> 11/2019, a paper on learning physical properties of blood flow dynamics accepted to Neural Networks.
           <li><p> 11/2019, a paper on intracoronary vessel border detection accepted to IEEE TMI.
           <li><p> 09/2019, a paper on salient object detection accepted to IEEE Network.
