--- a/service.html
+++ b/service.html
@@ -70,6 +70,13 @@
             <li><p> Multimedia Tools and Applications </p></li>
             <li><p> Neural Processing Letters </p></li>
         </ul>
+                
+        </ul>
+        <h2><hr><a name="profact"></a>Other</h2>        
+        <ul>
+            <li><p> MICCAI Mentor, 2022 </p></li>
+            
+        </ul>
     </div>
 </td>
 </tr>
