--- a/service.html
+++ b/service.html
@@ -47,6 +47,7 @@
             <li><p> IEEE Transactions on Multimedia   </p></li>
             <li><p> IEEE Transactions on Neural Networks and Learning Systems </p></li>
             <li><p> IEEE Transactions on Cybernetics </p></li>
+            <li><p> IEEE Transactions on Cognitive and Developmental Systems </p></li>
             <li><p> IEEE Transactions on Intelligent Transportation Systems   </p></li>
             <li><p> IEEE Transactions on Industrial Informatics   </p></li>
             <li><p> IEEE/ACM Transactions on Computational Biology and Bioinformatics  </p></li>
