--- a/publications.html
+++ b/publications.html
@@ -68,18 +68,28 @@
     <div>
         <h2><hr><a name="In Press"></a>In Press</h2>
         <ul>
-        <b>Unsupervised Tissue Segmentation via Deep Constrained Gaussian Network. </b> [<a href="https://doi.org/10.1109/TMI.2022.3195123" class=link>Link</a>]
-        <br> 
-        Yang Nan, Peng Tang, Guyue Zhang, Caihong Zeng, Zhihong Liu, <b>Zhifan Gao</b>, Heye Zhang, Guang Yang. <br>
-        <i>IEEE Transactions on Medical Imaging</i>
+	    <li><p>	
+	    <b>Intelligent Internet of Things in Mammography Screening using Multicenter Transformation Between Unified Capsules. </b>
+            <br>
+            Boyan Wang, Xuegang Hu, Jinglin Zhang, Chenchu Xu, <b>Zhifan Gao</b>
+            <i>IEEE Internet of Things Journal<i>
+	    </p></li>
+	
+	    <li><p>
+            <b>Unsupervised Tissue Segmentation via Deep Constrained Gaussian Network. </b> [<a href="https://doi.org/10.1109/TMI.2022.3195123" class=link>Link</a>]
+            <br> 
+            Yang Nan, Peng Tang, Guyue Zhang, Caihong Zeng, Zhihong Liu, <b>Zhifan Gao</b>, Heye Zhang, Guang Yang. <br>
+            <i>IEEE Transactions on Medical Imaging</i>
+	    </p></li>
+	
+	    <li><p>
+	    <b>Swin Transformer for Fast MRI. </b> [<a href="https://doi.org/10.1016/j.neucom.2022.04.051" class=link>Link</a>]
+            <br> 
+            Jiahao Huang, Yingying Fang, Yinzhe Wu, Huanjun Wu, <b>Zhifan Gao</b>, Yang Li, Javier Del Ser, Jun Xia, Guang Yang. <br>
+            <i>Neurocomputing</i>
+	    </p></li>
         </ul>
         
-        <h2><hr><a name="In Press"></a>In Press</h2>
-        <ul>
-        <b>Swin Transformer for Fast MRI. </b> [<a href="https://doi.org/10.1016/j.neucom.2022.04.051" class=link>Link</a>]
-        <br> 
-        Jiahao Huang, Yingying Fang, Yinzhe Wu, Huanjun Wu, <b>Zhifan Gao</b>, Yang Li, Javier Del Ser, Jun Xia, Guang Yang. <br>
-        <i>Neurocomputing</i>
         </ul>
     </div>
 
