--- a/publications.html
+++ b/publications.html
@@ -72,7 +72,7 @@
 	    <b>Intelligent Internet of Things in Mammography Screening using Multicenter Transformation Between Unified Capsules. </b>
             <br>
             Boyan Wang, Xuegang Hu, Jinglin Zhang, Chenchu Xu, <b>Zhifan Gao</b>
-            <i>IEEE Internet of Things Journal<i>
+            <i>IEEE Internet of Things Journal</i>
 	    </p></li>
 	
 	    <li><p>
