--- a/publications.html
+++ b/publications.html
@@ -71,7 +71,7 @@
 	    <li><p>	
 	    <b>Intelligent Internet of Things in Mammography Screening using Multicenter Transformation Between Unified Capsules. </b>
             <br>
-            Boyan Wang, Xuegang Hu, Jinglin Zhang, Chenchu Xu, <b>Zhifan Gao</b>
+            Boyan Wang, Xuegang Hu, Jinglin Zhang, Chenchu Xu, <b>Zhifan Gao</b> <br>
             <i>IEEE Internet of Things Journal</i>
 	    </p></li>
 	
