--- a/publications.html
+++ b/publications.html
@@ -94,6 +94,9 @@
     <div>
         <h2><hr><a name="2022"></a>2022</h2>
         <ul>
+		
+		
+		
             <li><p>
             <b>Annealing Genetic GAN for Imbalanced Web Data Learning. </b> [<a href="https://doi.org/10.1109/TMM.2021.3120642" class=link>Link</a>] 
             <br> 
@@ -111,8 +114,36 @@
             <li><p>
             <b>Vessel-GAN: Angiographic Reconstructions from Myocardial CT Perfusion with Explainable Generative Adversarial Networks. </b> [<a href="https://doi.org/10.1016/j.future.2021.12.007" class=link>Link</a>]
             <br> 
-            Chulin, Heye Zhang, Jiaqi Chen, <b>Zhifan Gao</b>, Pengfei Zhang, Khan Muhammad, and Javier Del Ser. <br>
+            Chulin Wu, Heye Zhang, Jiaqi Chen, <b>Zhifan Gao</b>, Pengfei Zhang, Khan Muhammad, and Javier Del Ser. <br>
             <i>Future Generation Computer Systems</i> 130: 128-139, 2022
+            </p></li>
+		
+	    <li><p>
+            <b>A Geometry-Constrainted Deformable Attention Network for Aortic Segmentation.</b> [<a href="https://doi.org/10.1007/978-3-031-16443-9_28" class=link>Link</a>] 
+            <br> 
+            <b>Weiyuan Lin, Hui Liu, Lin Gu, and <b>Zhifan Gao</b>. <br>
+            In <i>25nd International Conference on Medical Image Computing and Computer Assisted Intervention</i> (MICCAI 2022).
+            </p></li>
+		
+	    <li><p>
+            <b>Discrepancy and Gradient-guided Multi-modal Knowledge Distillation for Pathological Glioma Grading.</b> [<a href="https://doi.org/10.1007/978-3-031-16443-9_61" class=link>Link</a>] 
+            <br> 
+            <b>Xiaohan Xing, Zhen Chen, Meilu Zhu, Yuenan Hou, Zhifan Gao, and Yixuan Yuan . <br>
+            In <i>25nd International Conference on Medical Image Computing and Computer Assisted Intervention</i> (MICCAI 2022).
+            </p></li>
+	
+            <li><p>
+            <b>CS2: A Controllable and Simultaneous Synthesizer of Images and Annotations with Minimal Human Intervention.</b> [<a href="https://doi.org/10.1007/978-3-031-16452-1_1" class=link>Link</a>] 
+            <br> 
+            <b>Xiaodan Xing, Jiahao Huang, Yang Nan, Yinzhe Wu, Chengjia Wang, <b>Zhifan Gao</b>, Simon Walsh, and Guang Yang. <br>
+            In <i>25nd International Conference on Medical Image Computing and Computer Assisted Intervention</i> (MICCAI 2022).
+            </p></li>
+		
+	    <li><p>
+            <b>Swin Deformable Attention U-Net Transformer (SDAUT) for Explainable Fast MRI.</b> [<a href="https://doi.org/10.1007/978-3-031-16446-0_51" class=link>Link</a>] 
+            <br> 
+            <b>Jiahao Huang, Xiaodan Xing, <b>Zhifan Gao</b>, and Guang Yang. <br>
+            In <i>25nd International Conference on Medical Image Computing and Computer Assisted Intervention</i> (MICCAI 2022).
             </p></li>
         </ul>
     </div>
