--- a/publications.html
+++ b/publications.html
@@ -61,6 +61,13 @@
     <div>
         <h2><hr><a name="In Press"></a>In Press</h2>
         <ul>
+            <li><p>	
+	    <b>Multiple Adversarial Learning based Angiography Reconstruction for Ultra-low-dose Contrast Medium CT. </b> [<a href="https://doi.org10.1109/JBHI.2022.3213595" class=link>Link</a>]
+            <br>
+            Weiwei Zhang, Zhen Zhou, <b>Zhifan Gao</b>, Guang Yang, Lei Xu, Weiwen Wu, Heye Zhang. <br>
+            <i>IEEE Journal of Biomedical and Health Informatics</i>
+	    </p></li>
+		
 	    <li><p>	
 	    <b>Intelligent Internet of Things in Mammography Screening using Multicenter Transformation Between Unified Capsules. </b>
             <br>
