--- a/service.html
+++ b/service.html
@@ -55,8 +55,9 @@
             <li><p> IEEE Internet of Things Journal </p></li>
             <li><p> IEEE Network Magzine <p></li>
             <li><p> IEEE Signal Processing Letters <p></li>
-            <li><p> ACM Transactions on Multimedia Computing, Communications and Applications
-            <li><p> ACM Transactions on Internet Technology
+            <li><p> ACM Transactions on Multimedia Computing, Communications and Applications </p></li>
+            <li><p> ACM Transactions on Intelligent Systems and Technology </p></li>
+            <li><p> ACM Transactions on Internet Technology </p></li>
             <li><p> Neural Networks </p></li>
             <li><p> Medical Physics </p></li>
             <li><p> Physics in Medicine and Biology </p></li>
@@ -65,6 +66,7 @@
             <li><p> Computer Methods and Programs in Biomedicine </p></li>
             <li><p> Computers in Biology and Medicine </p></li>
             <li><p> Computing </p></li>
+            <li><p> Frontiers of Computer Science </p></li>
             <li><p> Frontiers Neuroinformatics </p></li>
             <li><p> Future Generation Computer Systems  </p></li>
             <li><p> Journal of Visual Communication and Image Representation </p></li>
