--- a/publications.html
+++ b/publications.html
@@ -61,8 +61,15 @@
     <div>
         <h2><hr><a name="In Press"></a>In Press</h2>
         <ul>
+	    <li><p>	
+	    <b>Progressive Perception Learning for Main Coronary Segmentation in X-ray Angiography. </b> [<a href="https://doi.org/10.1109/TMI.2022.3219126" class=link>Link</a>]
+            <br>
+            Hongwei Zhang, Zhifan Gao, Dong Zhang, William Kongto Hau, Heye Zhang. <br>
+            <i>IEEE Transactions on Medical Imaging</i>
+	    </p></li>
+		
             <li><p>	
-	    <b>Multiple Adversarial Learning based Angiography Reconstruction for Ultra-low-dose Contrast Medium CT. </b> [<a href="https://doi.org10.1109/JBHI.2022.3213595" class=link>Link</a>]
+	    <b>Multiple Adversarial Learning based Angiography Reconstruction for Ultra-low-dose Contrast Medium CT. </b> [<a href="https://doi.org/10.1109/JBHI.2022.3213595" class=link>Link</a>]
             <br>
             Weiwei Zhang, Zhen Zhou, <b>Zhifan Gao</b>, Guang Yang, Lei Xu, Weiwen Wu, Heye Zhang. <br>
             <i>IEEE Journal of Biomedical and Health Informatics</i>
