--- a/publications.html
+++ b/publications.html
@@ -62,9 +62,16 @@
         <h2><hr><a name="In Press"></a>In Press</h2>
         <ul>
 	    <li><p>	
+	    <b>Multi-Level Multi-Type Self-Generated Knowledge Fusion for Cardiac Ultrasound Segmentation. </b> [<a href="https://doi.org/10.1016/j.inffus.2022.11.004" class=link>Link</a>]
+            <br>
+            Chenjin Yu, Shuang Li, Dhanjoo Ghista, <b>Zhifan Gao</b>, Heye Zhang, Javier Del Ser, Lin Xu. <br>
+            <i>Information Fusion</i>
+	    </p></li>
+		
+	    <li><p>	
 	    <b>Progressive Perception Learning for Main Coronary Segmentation in X-ray Angiography. </b> [<a href="https://doi.org/10.1109/TMI.2022.3219126" class=link>Link</a>]
             <br>
-            Hongwei Zhang, Zhifan Gao, Dong Zhang, William Kongto Hau, Heye Zhang. <br>
+            Hongwei Zhang, <b>Zhifan Gao</b>, Dong Zhang, William Kongto Hau, Heye Zhang. <br>
             <i>IEEE Transactions on Medical Imaging</i>
 	    </p></li>
 		
